Build log overflow fix

--- a/site/public/css/rainbow-customization.css
+++ b/site/public/css/rainbow-customization.css
@@ -3,6 +3,7 @@
     border: 2px solid var(--viewed-content);
     padding: 5px;
     padding-left: 20px;
+    padding-right: 20px;
     margin-top: 10px;
     border-radius: 25px;
 }
@@ -96,6 +97,28 @@
     display: none;
     margin-top: 10px;
     margin-bottom: 10px;
+    overflow: auto;
+}
+
+/*status-log-scrollbar*/
+#save_status_log::-webkit-scrollbar {
+    height: 4px;
+    width: 4px;
+    border-radius: 2px;
+}
+
+#save_status_log::-webkit-scrollbar-track {
+    background: var(--standard-light-gray);
+    border-radius: 2px;
+}
+
+#save_status_log::-webkit-scrollbar-thumb {
+    background: var(--standard-medium-gray);
+    border-radius: 2px;
+}
+
+#save_status_log::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
 
 /* stylelint-disable-next-line selector-id-pattern */
